--- a/README.rdoc
+++ b/README.rdoc
@@ -1,8 +1,8 @@
-= shella
+# shella #
 
-Description goes here.
+A basic shell commands interpreter.
 
-== Note on Patches/Pull Requests
+## Note on Patches/Pull Requests ##
  
 * Fork the project.
 * Make your feature addition or bug fix.
@@ -12,6 +12,6 @@ Description goes here.
   (if you want to have your own version, that is fine but bump version in a commit by itself I can ignore when I pull)
 * Send me a pull request. Bonus points for topic branches.
 
-== Copyright
+## Copyright ##
 
 Copyright (c) 2010 Rawane ZOSSOU. See LICENSE for details.
